[gd_scene load_steps=7 format=3 uid="uid://bicer5hvlabr8"]

[ext_resource type="Script" path="res://scripts/menu/main_menu_controller_custom.gd" id="1_i2sts"]
[ext_resource type="PackedScene" uid="uid://bin6b2ypkka84" path="res://prefabs/options_menu_custom.tscn" id="2_87k8p"]
[ext_resource type="LabelSettings" uid="uid://6lpf7ir6fyi8" path="res://themes/label_settings_title.tres" id="2_ayxu5"]
[ext_resource type="LabelSettings" uid="uid://d20dc6wvnojda" path="res://themes/label_settings_subtitle.tres" id="3_bcn68"]
[ext_resource type="PackedScene" uid="uid://djvedm1ibu5wi" path="res://prefabs/credits_menu.tscn" id="3_wydvs"]
[ext_resource type="Theme" uid="uid://d2ibmuqmyfsfj" path="res://themes/theme_main_menu_button.tres" id="4_yh14l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2sts")

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.408854
anchor_top = 0.33287
anchor_right = 0.591146
anchor_bottom = 0.66713
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "P.O.W.D.E.R."
label_settings = ExtResource("2_ayxu5")
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Powder On Wild Days Explodes Randomly
"
label_settings = ExtResource("3_bcn68")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_yh14l")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="OptionsButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_yh14l")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="CreditsButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_yh14l")
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="QuitButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_yh14l")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_87k8p")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="CreditsMenu" parent="." instance=ExtResource("3_wydvs")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="Content/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="open_options"]
[connection signal="pressed" from="Content/CreditsButton" to="." method="open_credits"]
[connection signal="pressed" from="Content/QuitButton" to="." method="quit"]
[connection signal="close" from="OptionsMenu" to="." method="close_options"]
[connection signal="close" from="CreditsMenu" to="." method="close_credits"]
